# visreps

./: .env  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  example.py  pyproject.toml  pytest.ini  read_nsd.py  save_selected_imgs.py
.claude/commands/: parallel.md
.cursor/rules/: clean-code.mdc  codebase_functionality.mdc  codebase_structure.mdc  task_management_todo.mdc  testing.mdc
archvision/: alex_imgnet.py  benchmarker.py  dataloader.py  evals.py  example.py  models.py  read_nsd.py  run.py  run_eval.py  run_train.py  runner-new.py  runner.py  temp_eval.py  test.ipynb  trainer.py  transforms.py  utils.py
archvision/configs/: default.json  eval.json  temp_eval.json  train.json
archvision/dataloaders/: imagenet_loader.py
archvision/models/: alexnet.py  backbone.py  base_cnn.py  base_wavelet.py  conv_layers-new.py  conv_layers.py  custom.py  expansion.py  last_layer.py  nn_ops.py  scat_transform_base_cnn.py  scat_transform_custom.py  scat_transform_front.py  standard.py  standard_cnns.py  wavelet_cnn.py  wavelet_front.py  wavelet_layers.py
archvision/runner/: eval.py  train.py
configs/: eval.json  train.json
configs/eval/: base.json  checkpoint_model.json  torchvision_model.json
configs/grids/: eval_all_pca.json  eval_cusack.json  eval_default.json  eval_ecnet.json  eval_scat_pca.json  eval_tvsd_pca.json  nsd.json  nsd_synthetic.json  reruns.json  semantic_align.json  things.json  train_default.json  train_ecnet.json  tvsd.json
configs/train/: base.json  cluster_base.json  custom_cnn.json  standard_cnn.json
examples/: example.py
experiments/: README.md  clip_nsd_rsa.py  finetuning.py  linear_probe.py  pca_poles_images.py  play.py  poles_interpretability.py  semantic_alignment.py  srp_comparison.py  visualize_class_distribution.py  wordnet.py
experiments/1k_pretrained/: 1k_pretrained_nsd_rsa.py  plot_rsa_by_depth.py
experiments/binary_pc_rsa/: main.py  visualize.py
experiments/coarse_grain_benefits/: CLAUDE.md  augmentation_invariance.py  class_selectivity_index.py  curriculum_finetuning.py  curriculum_nsd_rsa.py  few_shot_learning.py  imagenet_c_robustness.py  interpretability_index.py  linear_probe.py  plot_curriculum_rsa.py  utils.py
experiments/neurips_2025/: plotter_utils.py
experiments/pca_analysis/: pca_poles_images.py  pca_visualization.py  visualize_class_distribution.py
experiments/reconstruction_analysis/: plot.py  run_reconstruction.py
experiments/representation_analysis/: nearest_neighbors.py  rsm_comparison.py  run_all.py  task_brain_alignment.py  utils.py  variance_ratio.py
experiments/semantic_analysis/: fine_grained_structure.py  pc_quadrant_comparison.py  pc_semantic_analysis.py  plot_semantic_classes_umap.py  semantic_alignment.py
experiments/stimulus_robustness/: analysis.py  data.json  plot.py
experiments/stimulus_sensitivity/: data.json  plot.py
manuscript/: NeurIPS2025_submission.md  claude.md  methods.md
plotters/: 1conv1fc.py  CLAUDE.md  README.md  RSA_regions.py  across_metrics.py  arch_params.ipynb  bar_plot.py  bar_plot_comparison.py  basic.py  box_plot_architectures.py  brainscore_over_training.py  coarseness_barplot.py  data_augment.py  dataset_size_scaling.py  full-vs-pcs-individual.py  full-vs-pcs-variance.py  full-vs-pcs.py  paired_comparison.py  pca2-progression.py  plot.py  plot_architectures.py  plot_coarseness.py  plot_eigenspectra.py  plot_helpers.py  plotter_utils.py  plssvd_epoch_comparison.py  plssvd_plot.py  plssvd_results.json  reconstructed_rsa.py  reconstructed_rsa_nsd.py  reconstructed_rsa_things.py  rsa_by_epoch.py  rsa_over_training.py  rsa_pca_untrained.py  rsa_score_by_classes.py  rsa_temporal.py  rsm_2d_density.py  rsm_scatterplots.py  rsm_triangles.py  scat_pca.py  (+6 more)
runner/: eval.py  train.py
scripts/: binary_pc_rsa.py  cache_tvsd_data.py  clip_representations.py  combine_fmri_responses.py  copy_checkpoints.py  create_imagenet_labels.py  create_imagenet_mini.py  create_nsd_subset_data.py  eval_checkpoints.py  eval_scheduler.py  explore_results.py  extract_representations.py  extract_reps.py  extract_xarray_coords.py  gemini_representations.py  make_pca_classes.py  pca_reps.py  play.py  preprocess_tinyimgnet.py  process_cusack25.py  run_analysis_pipeline.py  runner.py  scheduler.py  select_nsd_subset.py  submit_job.sh  t_test.py  train_scheduler.py  visualize_binary_pc_rsa.py  visualize_eigenspectra.py
slurm/: basic.sh  eval_scheduler.py  partition_status.sh  train_scheduler.py
tests/: test_cifar_loader.py  test_config_env.py  test_dataloading.py  test_encoding_score.py  test_evals.py  test_imagenet_loader.py  test_model_setup.py  test_pca_cls_similarity.py  test_random_seed.py  test_rsa_bootstrap.py  test_run.py  test_tiny_imagenet_loader.py  test_training_pipeline.py  test_utils.py
visreps/: CLAUDE.md  benchmarker.py  config.py  dataloader.py  dataloaders.py  evals.py  example.py  metrics.py  neural_data_processor.py  run.py  trainer.py  utils.py
(+142 files in other folders)
