[project]
name = "visreps"
version = "0.1.0"
description = "A repository for studying the emergence of representational similarities between artificial neural networks and the human visual system during training."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Yash Mehta", email = "yashsmehta95@gmail.com"}
]
license = {text = "MIT"}
keywords = ["deep learning", "visual representations", "neural networks", "representation learning", "cognitive science"]
urls = { Homepage = "https://github.com/yashsmehta/visreps", Repository = "https://github.com/yashsmehta/visreps" }
dependencies = [
    "torch>=2.5",
    "torchvision",
    "torchaudio",
    "pandas>=2.2.3",
    "numpy>=1.26.4",
    "omegaconf>=2.3.0",
    "PyWavelets>=1.6.0",
    "colorlog>=6.8.2",
    "wandb>=0.16.3",
    "tqdm>=4.66.2",
    "scipy>=1.12.0",
    "xarray>=2024.1.1",
    "rich>=13.7.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.0",
    "gputil>=1.4.0",
    "scikit-learn>=1.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.9.1", 
    "flake8>=6.1.0",
    "mypy>=1.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["visreps"]
