[project]
name = "visreps"
version = "0.1.0"
description = "A repository for studying the emergence of representational similarities between artificial neural networks and the human visual system during training."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "xxx", email = "xxx@gmail.com"}
]
license = {text = "MIT"}
keywords = ["deep learning", "visual representations", "neural networks", "representation learning", "cognitive science"]
urls = { Homepage = "https://github.com/yashsmehta/visreps", Repository = "https://github.com/yashsmehta/visreps" }
dependencies = [
    "torch>=2.5",
    "torchvision",
    "torchaudio",
    "timm>=1.0.20",
    "himalaya>=0.4.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "scipy>=1.12.0",
    "xarray>=2024.1.1",
    "h5py>=3.10.0",
    "Pillow>=10.0.0",
    "scikit-learn>=1.6.1",
    "joblib>=1.3.0",
    "umap-learn>=0.5.5",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "colorlog>=6.8.2",
    "loguru>=0.7.0",
    "wandb>=0.16.3",
    "tqdm>=4.66.2",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "psutil>=5.9.0",
    "gputil>=1.4.0",
    "gpustat>=1.1.1",
    "filelock>=3.13.0",
    "pydantic>=2.0.0",
    "PyWavelets>=1.6.0",
    "imageio>=2.37.0",
    "git-lfs>=1.6",
    "google-genai>=1.47.0",
    "dreamsim>=0.2.1",
    "pytest>=8.3.4",
    "bonner-libraries @ git+https://github.com/BonnerLab/bonner-libraries.git@main",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.9.1",
    "flake8>=6.1.0",
    "mypy>=1.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["visreps"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Solving ridge is slower than solving kernel ridge:UserWarning",
]
