[project]
name = "visreps"
version = "0.1.0"
description = "A repository for studying the emergence of representational similarities between artificial neural networks and the human visual system during training."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "xxx", email = "xxx@gmail.com"}
]
license = {text = "MIT"}
keywords = ["deep learning", "visual representations", "neural networks", "representation learning", "cognitive science"]
urls = { Homepage = "https://github.com/yashsmehta/visreps", Repository = "https://github.com/yashsmehta/visreps" }
dependencies = [
    "torch>=2.0",
    "torchvision",
    "timm>=1.0.0",
    "himalaya>=0.4.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "xarray>=2023.1.0",
    "h5py>=3.8.0",
    "Pillow>=9.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.2.0",
    "nltk>=3.8.0",
    "umap-learn>=0.5.3",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "wandb>=0.15.0",
    "tqdm>=4.60.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "pytest>=7.4.0",
    "nilearn>=0.10.0",
    "bonner-libraries @ git+https://github.com/BonnerLab/bonner-libraries.git@main",
]

[project.optional-dependencies]
dev = [
    "black>=23.9.1",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
]
experiments = [
    "albumentations>=1.3.0",
    "openai-clip>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["visreps"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Solving ridge is slower than solving kernel ridge:UserWarning",
]
